--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
     <groupId>org.karasiewicz.pdf</groupId>
     <artifactId>PdfViewer</artifactId>
     <version>1.0</version>
+    <properties>
+        <commons-io.version>2.6</commons-io.version>
+        <org-apache-poi.version>4.0.1</org-apache-poi.version>
+        <org-apache-pdfbox.version>2.0.15</org-apache-pdfbox.version>
+        <lombok.version>1.18.10</lombok.version>
+    </properties>
     <build>
         <plugins>
             <plugin>
@@ -24,17 +30,23 @@
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
-            <version>2.0.15</version>
+            <version>${org-apache-pdfbox.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.6</version>
+            <version>${commons-io.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
-            <version>4.0.1</version>
+            <version>${org-apache-poi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
