--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <org-apache-poi.version>4.0.1</org-apache-poi.version>
         <org-apache-pdfbox.version>2.0.15</org-apache-pdfbox.version>
         <lombok.version>1.18.10</lombok.version>
+        <spock-core.version>1.0-groovy-2.4</spock-core.version>
+        <groovy-all.version>2.4.7</groovy-all.version>
     </properties>
     <build>
         <plugins>
@@ -48,5 +50,23 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-core</artifactId>
+            <version>${spock-core.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>${groovy-all.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ivy</groupId>
+            <artifactId>ivy</artifactId>
+            <version>2.4.0</version>
+        </dependency>
     </dependencies>
+
 </project>
